# pscweb3

./: .gitignore  README.md  alembic.ini  analyze_translations.ps1  check_db_synopsis.py  check_db_synopsis_detail.py  check_db_synopsis_detail_v2.py  check_script_content.py  pyproject.toml  repro_bug.py  repro_full.py  repro_synopsis.py  repro_user.py  run_test_and_log.py  run_verify_and_log.py  scenario.fountain  test_api_log.txt  test_api_log_cmd.txt  test_f_multi_action.py  test_fix_multi_line.py  test_fountain.py  test_fountain_2.py  test_fountain_3.py  test_fountain_absorption.py  test_fountain_lib.py  test_log.txt  test_output.txt  test_output_utf8.txt  test_parenthetical.py  test_parenthetical_2.py  test_playscript.py  test_result.txt  test_scene_description.py  translate_errors.ps1  verify_bold_title.py  verify_output_utf8.txt
backend/: .env.example  README.md  alembic.ini  analyze_audit_logs.py  apply_migration.py  check_backend.py  check_db.py  check_db_integrity.py  check_db_schema.py  check_discord_connect.py  check_discord_rate_limit.py  check_milestone_schema.py  check_milestones.py  check_script_data.py  check_script_status.py  check_tables.py  check_upload_issue.py  copy_playscript.py  coverage_baseline.txt  coverage_current.txt  coverage_detail.txt  coverage_phase2.txt  coverage_phase3.txt  coverage_phase4.txt  create_test_invitation.py  debug_env.py  debug_fountain_elements.py  debug_fountain_metadata.py  debug_invitation_script.py  debug_output.txt  debug_path.py  debug_pdf.py  debug_upload_logic.py  dump_playscript.py  find_test_invitation.py  fix_data_is_public.py  fix_missing_participants.py  function_app.py  get_audit_logs.py  get_help.py  (+47 more)
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0209794dca2b_add_rehearsal_scenes.py  03ac4c328b00_initial_migration_all_models.py  11398f069793_add_reminder_3_to_attendance.py  15edb111ec4c_add_explicit_deny_policy_to_alembic_.py  26dbc6dee525_feat_add_reservations_table_and_.py  26dcbb9f2c36_add_location_to_milestones.py  3319a4c48ed0_add_staff_roles.py  43eb847cfc0a_enable_rls_for_reservations.py  4880a38c039a_add_script_webhook.py  4f6a8b2c1d3e_restrict_schedule_poll_rls_to_select.py  51aca2fbf3e9_enable_rls_on_public_tables.py  52a71fe9ab75_add_schedule_poll_tables.py  5b43ac2a01b2_add_act_number_to_scenes.py  6694a7b06e6d_deny_all_public_data_api_access_via_rls_.py  681d43a6b83f_add_author_to_scripts.py  6c5e9f1b0458_add_attendance_multiple_reminders_config.py  71fdf49aabc4_add_pdf_layout_options_to_script.py  732c63439203_add_attendance_event_models.py  79e8e3d948f5_add_created_by_id_to_theater_project.py  7a09c18189f8_add_schedule_poll_auto_reminder_fields.py  7bc5f3df9821_add_title_to_rehearsals.py  8556f52c33e9_add_is_custom_and_is_manual_flags.py  8d9a40f8cd8a_add_revision_to_scripts.py  9660d389e8f0_restrict_rls_policies_to_select_only.py  a1b2c3d4e5f6_add_rehearsal_id_to_attendance_events.py  a97a9d567b99_add_milestone_model.py  a97dfcebc4e8_add_premium_password_to_user.py  ab416aca0cee_add_discord_webhook_url_to_projects.py  ab6eb8af6b2b_add_order_to_character.py  acb265c6599f_add_location_to_milestones.py  af05603d867c_add_milestone_is_public.py  b2b3ca1feb2f_add_auditlog.py  b6f8db84f1db_add_metadata_to_scripts.py  c0e0a2bc1634_add_project_invitations.py  c0e567c6f687_add_staff_role_columns.py  ce7cc9d0b71f_fix_rls_policies_for_schedule_polls.py  d28bee5388f7_enable_rls_for_schedule_poll_tables.py  d2f1bd30103f_merge_auditlog.py  d840552faeb6_add_description_to_character.py  db92b4fc56e6_restore_rls_write_policies_for_schedule_.py  (+7 more)
backend/migrations/: add_schedule_date_to_attendance.sql  timezone_migration.sql
backend/scripts/: add_display_name_column.py  add_dummy_member.py  check_connect_and_users.py  debug_scene_chart_schema.py  debug_state.py  fix_scene_charts.py  migrate_add_schedule_date.py  setup_supabase.py
backend/src/: __init__.py  config.py  dummy_fix.txt  main.py
backend/src/api/: __init__.py  attendance.py  auth.py  auth_helper.py  characters.py  dashboard.py  interactions.py  invitations.py  my_schedule.py  projects.py  public.py  rehearsals.py  reservations.py  scene_charts.py  schedule_polls.py  scripts.py  users.py
backend/src/auth/: __init__.py  discord.py  jwt.py
backend/src/core/: decorators.py  logger.py
backend/src/db/: __init__.py  (+2 more)
backend/tests/: conftest.py  test_attendance_tasks.py  test_basic.py  test_invitation_manual_fix.py
(+630 files in other folders)
